--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+html,
+body {
+  font-size: normal;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
